# perm

./: README.md  pyproject.toml
perm/: cli.py  core.py
