[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perm-auditor"
version = "0.1.0"
description = "Security permissions auditor — find world-readable secrets, SUID, weak perms"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[project.scripts]
perm = "perm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["perm*"]
